--- a/PR_3-1_STRUCTS.vcxproj
+++ b/PR_3-1_STRUCTS.vcxproj
@@ -20,11 +20,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="generator.cpp" />
+    <ClCompile Include="global.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="work_with_arrays.cpp" />
+    <ClCompile Include="work_with_files.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="generator.h" />
-    <ClInclude Include="preproc.h" />
+    <ClInclude Include="global.h" />
+    <ClInclude Include="include.h" />
+    <ClInclude Include="work_with_arrays.h" />
+    <ClInclude Include="work_with_files.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Bubble.txt" />
@@ -35,6 +41,7 @@
     <Text Include="rep_1000.txt" />
     <Text Include="rep_500.txt" />
     <Text Include="Shaker.txt" />
+    <Text Include="test_numbers.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -137,6 +144,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
